crates/reinhardt-core/macros/tests/ui/shared_model/fail/with_args.stderr
error: #[shared_model] does not accept arguments in this version
 --> tests/ui/shared_model/fail/with_args.rs:5:16
  |
5 | #[shared_model(no_schema)]
  |                ^^^^^^^^^
